# generate-inv

./: .harlequin.toml  .windsurfrules  README.md  makefile  pyproject.toml
src/generate_inv/: __init__.py  address.py  company.py  database.py  db.py  generate.py  invoice.j2  invoice.py  invoice_item.py  invoice_items.py  models.py  settings.py  sql.py  types.py
tests/: data.py  test_cli.py  test_db.py
